add test script

--- a/6.0.0/Dockerfile.base
+++ b/6.0.0/Dockerfile.base
@@ -1,10 +1,11 @@
 FROM ruby:2.6-alpine
 
-RUN apk add --update alpine-sdk nodejs npm tzdata
+RUN apk update && apk add -u alpine-sdk nodejs npm tzdata
+RUN apk update && apk add -u postgresql-dev imagemagick yarn less
 
+RUN gem install bundler
 RUN gem install rails -v 6.0.0
 RUN gem install nokogiri
 
-RUN apk update && apk add -u postgresql-dev imagemagick yarn less
 
 WORKDIR /app
